--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "97981989",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import Select\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "import time\n",
+    "\n",
+    "# Path to ChromeDriver\n",
+    "driver_path = '/path/to/chromedriver'\n",
+    "\n",
+    "# Initialize the browser\n",
+    "driver = webdriver.Chrome(service=Service(driver_path))\n",
+    "\n",
+    "# Open the website\n",
+    "driver.get('https://example.com')  # Replace with your URL\n",
+    "\n",
+    "# Wait for page to load\n",
+    "time.sleep(3)\n",
+    "\n",
+    "# Select an option from a dropdown filter\n",
+    "dropdown = Select(driver.find_element(By.ID, 'filter_dropdown_id'))  # Replace with actual filter ID\n",
+    "dropdown.select_by_value('desired_value')\n",
+    "\n",
+    "# Enter text in a text field filter\n",
+    "text_field = driver.find_element(By.ID, 'filter_textfield_id')\n",
+    "text_field.clear()\n",
+    "text_field.send_keys('desired_text')\n",
+    "\n",
+    "# Wait for the Apply button to be clickable, then click it\n",
+    "apply_button = WebDriverWait(driver, 10).until(\n",
+    "    EC.element_to_be_clickable((By.ID, 'apply_button_id'))\n",
+    ")\n",
+    "apply_button.click()\n",
+    "\n",
+    "# Wait for the download button to be clickable, then click it\n",
+    "download_button = WebDriverWait(driver, 10).until(\n",
+    "    EC.element_to_be_clickable((By.ID, 'download_button_id'))\n",
+    ")\n",
+    "download_button.click()\n",
+    "\n",
+    "# Optional: Wait for the download to complete\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# Close the browser\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7f61aa07",
    "metadata": {},
    "outputs": [],
