--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1934f5a",
+   "id": "4aaade20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "# Set up the browser and SSO settings\n",
+    "driver = webdriver.Chrome()  # Replace with your default browser\n",
+    "\n",
+    "# Open the website and log in using default SSO\n",
+    "driver.get(\"https://example.com\")  # Replace with the website URL\n",
+    "\n",
+    "# Wait for the login process to complete\n",
+    "WebDriverWait(driver, 10).until(EC.title_contains(\"Logged in\"))\n",
+    "\n",
+    "# Navigate to the page with filters\n",
+    "driver.get(\"https://example.com/filters\")  # Replace with the filter page URL\n",
+    "\n",
+    "# Identify and interact with the filter elements\n",
+    "filter_elements = driver.find_elements_by_css_selector(\".filter-option\")\n",
+    "for element in filter_elements:\n",
+    "    # Perform the necessary actions to change the filter options\n",
+    "    element.click()  # Replace with the actual action required\n",
+    "\n",
+    "# Click the ellipsis button to download the file\n",
+    "download_button = driver.find_element_by_css_selector(\".download-button\")\n",
+    "download_button.click()\n",
+    "\n",
+    "# Specify the file path and name for the downloaded file\n",
+    "file_path = \"/path/to/downloaded/file.csv\"  # Replace with the desired file path and name\n",
+    "\n",
+    "# Close the browser\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8788a59",
    "metadata": {},
    "outputs": [],
    "source": [
