--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16371955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def options_to_dict(options):\n",
+    "    options_dict = {}\n",
+    "    for key in dir(options):\n",
+    "        if not key.startswith('__'):\n",
+    "            options_dict[key] = getattr(options, key)\n",
+    "    return options_dict\n",
+    "\n",
+    "edge_options = Options()\n",
+    "edge_options.use_chromium = True\n",
+    "\n",
+    "options_dict = options_to_dict(edge_options)\n",
+    "options_json = json.dumps(options_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4aaade20",
    "metadata": {},
    "outputs": [],
