--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16371955",
+   "id": "da873fc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.edge.service import Service\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "# Path to your Microsoft Edge WebDriver (Make sure it matches your browser version)\n",
+    "edge_driver_path = \"path/to/msedgedriver.exe\"\n",
+    "\n",
+    "# Set up Edge WebDriver\n",
+    "service = Service(edge_driver_path)\n",
+    "driver = webdriver.Edge(service=service)\n",
+    "\n",
+    "# Open the URL\n",
+    "driver.get('https://example.com')  # Replace with your actual URL\n",
+    "\n",
+    "# Wait for the page to load and for the SSO button to be clickable\n",
+    "WebDriverWait(driver, 10).until(\n",
+    "    EC.element_to_be_clickable((By.XPATH, \"//button[contains(text(), 'My organization's single sign-on')]\"))\n",
+    ")\n",
+    "\n",
+    "# Locate and click the \"SSO\" button\n",
+    "sso_button = driver.find_element(By.XPATH, \"//button[contains(text(), 'My organization's single sign-on')]\")\n",
+    "sso_button.click()\n",
+    "\n",
+    "# Let the SSO process complete\n",
+    "# You can wait for the page to load after the login\n",
+    "WebDriverWait(driver, 10).until(\n",
+    "    EC.presence_of_element_located((By.ID, \"some_element_after_login\"))  # Replace with an element that appears after login\n",
+    ")\n",
+    "\n",
+    "# You can now proceed to interact with the logged-in page\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35379e4d",
    "metadata": {},
    "outputs": [],
    "source": [
