--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,46 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecc731ce",
+   "id": "3077a0db",
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "from selenium.webdriver.edge.service import Service\n",
-    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.edge.options import Options\n",
     "import time\n",
     "\n",
-    "# Path to the Microsoft Edge WebDriver (change if necessary)\n",
-    "edge_driver_path = 'C:/path/to/your/msedgedriver.exe'  # Update this if needed\n",
+    "# Step 1: Set up the Edge WebDriver using DevTools Protocol\n",
+    "options = Options()\n",
+    "options.use_chromium = True  # Ensure using Chromium-based Edge\n",
     "\n",
-    "# Step 1: Set up the service for Edge\n",
-    "service = Service(edge_driver_path)\n",
+    "# Launch Edge with the DevTools protocol\n",
+    "driver = webdriver.Edge(options=options)\n",
     "\n",
-    "# Step 2: Set up options for Edge WebDriver\n",
-    "options = webdriver.EdgeOptions()\n",
-    "\n",
-    "# Step 3: Launch Edge WebDriver with the defined options\n",
-    "driver = webdriver.Edge(service=service, options=options)\n",
-    "\n",
-    "# Step 4: Open a blank tab to avoid slow default homepage\n",
+    "# Step 2: Open a blank tab first to bypass slow homepage\n",
     "driver.execute_script(\"window.open('');\")\n",
-    "time.sleep(1)  # Pause for the new tab to open\n",
+    "time.sleep(1)  # Pause to let the new tab load\n",
     "\n",
-    "# Step 5: Switch to the new tab\n",
+    "# Step 3: Switch to the new tab\n",
     "driver.switch_to.window(driver.window_handles[1])\n",
     "\n",
-    "# Step 6: Navigate to the target URL in the new tab\n",
+    "# Step 4: Navigate to the desired URL\n",
     "target_url = 'https://your-target-website.com'  # Replace with your target URL\n",
     "driver.get(target_url)\n",
     "\n",
-    "# Step 7: Close the default homepage tab (the first tab)\n",
+    "# Step 5: Close the default homepage tab (which should be the first tab)\n",
     "driver.switch_to.window(driver.window_handles[0])\n",
     "driver.close()\n",
     "\n",
-    "# Step 8: Switch back to the target website tab\n",
+    "# Switch back to the target website tab\n",
     "driver.switch_to.window(driver.window_handles[0])\n",
     "\n",
-    "# Step 9: Let the browser stay open for 10 seconds (or as long as you need)\n",
+    "# Let the browser stay open for 10 seconds (or as long as you need)\n",
     "time.sleep(10)\n",
     "\n",
     "# Finally, close the browser\n",
