--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,40 +3,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3077a0db",
+   "id": "987c8717",
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "from selenium.webdriver.edge.options import Options\n",
     "import time\n",
     "\n",
-    "# Step 1: Set up the Edge WebDriver using DevTools Protocol\n",
-    "options = Options()\n",
-    "options.use_chromium = True  # Ensure using Chromium-based Edge\n",
+    "# Step 1: Set up Edge WebDriver using basic options\n",
+    "options = webdriver.EdgeOptions()\n",
     "\n",
-    "# Launch Edge with the DevTools protocol\n",
+    "# Attempt to launch Edge without specifying the Service\n",
     "driver = webdriver.Edge(options=options)\n",
     "\n",
-    "# Step 2: Open a blank tab first to bypass slow homepage\n",
+    "# Step 2: Open a blank tab to avoid the slow homepage\n",
     "driver.execute_script(\"window.open('');\")\n",
-    "time.sleep(1)  # Pause to let the new tab load\n",
+    "time.sleep(1)  # Wait for the new tab to open\n",
     "\n",
     "# Step 3: Switch to the new tab\n",
     "driver.switch_to.window(driver.window_handles[1])\n",
     "\n",
-    "# Step 4: Navigate to the desired URL\n",
-    "target_url = 'https://your-target-website.com'  # Replace with your target URL\n",
+    "# Step 4: Navigate to the target URL in the new tab\n",
+    "target_url = 'https://your-target-website.com'  # Replace with your actual URL\n",
     "driver.get(target_url)\n",
     "\n",
-    "# Step 5: Close the default homepage tab (which should be the first tab)\n",
+    "# Step 5: Close the default homepage tab (which is the first tab)\n",
     "driver.switch_to.window(driver.window_handles[0])\n",
     "driver.close()\n",
     "\n",
-    "# Switch back to the target website tab\n",
+    "# Step 6: Switch back to the target website tab\n",
     "driver.switch_to.window(driver.window_handles[0])\n",
     "\n",
-    "# Let the browser stay open for 10 seconds (or as long as you need)\n",
+    "# Step 7: Let the browser stay open for some time\n",
     "time.sleep(10)\n",
     "\n",
     "# Finally, close the browser\n",
