--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,8 +2,156 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "541cec9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Business Framework Country R3  GCB\n",
+      "0          Global CMB         UK  0-1\n",
+      "1          Global CMB         UK    2\n",
+      "2          Global CMB         UK    3\n",
+      "3          Global CMB         UK    4\n",
+      "4          Global CMB         UK    5\n",
+      "5          Global CMB         UK    6\n",
+      "6          Global CMB         UK    7\n",
+      "7          Global CMB         UK    8\n",
+      "8     Other Framework         US  0-1\n",
+      "9     Other Framework         US    2\n",
+      "10    Other Framework         US    3\n",
+      "11    Other Framework         US    4\n",
+      "12    Other Framework         US    5\n",
+      "13    Other Framework         US    6\n",
+      "14    Other Framework         US    7\n",
+      "15    Other Framework         US    8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrame to simulate the input\n",
+    "data = {\n",
+    "    'Business Framework': ['Global CMB', 'Other Framework'],  # Sample values\n",
+    "    'Country R3': ['UK', 'US'],  # Sample values\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame from the sample data\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Prepare an empty list to collect the expanded rows\n",
+    "expanded_rows = []\n",
+    "\n",
+    "# Loop through each row in the original DataFrame\n",
+    "for index, row in df.iterrows():\n",
+    "    # For the first repetition, add \"0-1\" as the GCB value\n",
+    "    expanded_rows.append({\n",
+    "        'Business Framework': row['Business Framework'],\n",
+    "        'Country R3': row['Country R3'],\n",
+    "        'GCB': '0-1'\n",
+    "    })\n",
+    "\n",
+    "    # For the subsequent rows, add GCB values from 2 to 8\n",
+    "    for gcb_value in range(2, 9):  # Values from 2 to 8\n",
+    "        expanded_rows.append({\n",
+    "            'Business Framework': row['Business Framework'],\n",
+    "            'Country R3': row['Country R3'],\n",
+    "            'GCB': gcb_value\n",
+    "        })\n",
+    "\n",
+    "# Create a new DataFrame from the expanded rows\n",
+    "expanded_df = pd.DataFrame(expanded_rows)\n",
+    "\n",
+    "# Save the final DataFrame to a new Excel file or CSV if needed\n",
+    "# expanded_df.to_excel('expanded_output.xlsx', index=False)\n",
+    "\n",
+    "# Print the expanded DataFrame\n",
+    "print(expanded_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0448e49b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Business Framework Country R3  GCB\n",
+      "0          Global CMB         UK    0\n",
+      "1          Global CMB         UK    1\n",
+      "2          Global CMB         UK    2\n",
+      "3          Global CMB         UK    3\n",
+      "4          Global CMB         UK    4\n",
+      "5          Global CMB         UK    5\n",
+      "6          Global CMB         UK    6\n",
+      "7          Global CMB         UK    7\n",
+      "8     Other Framework         US    0\n",
+      "9     Other Framework         US    1\n",
+      "10    Other Framework         US    2\n",
+      "11    Other Framework         US    3\n",
+      "12    Other Framework         US    4\n",
+      "13    Other Framework         US    5\n",
+      "14    Other Framework         US    6\n",
+      "15    Other Framework         US    7\n",
+      "16                wpb         IN    0\n",
+      "17                wpb         IN    1\n",
+      "18                wpb         IN    2\n",
+      "19                wpb         IN    3\n",
+      "20                wpb         IN    4\n",
+      "21                wpb         IN    5\n",
+      "22                wpb         IN    6\n",
+      "23                wpb         IN    7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming your data is in a CSV file or an Excel file\n",
+    "# Replace 'your_file.xlsx' with the path to your Excel file if you're reading from one\n",
+    "# df = pd.read_excel('your_file.xlsx')\n",
+    "\n",
+    "# Sample DataFrame to simulate the input\n",
+    "data = {\n",
+    "    'Business Framework': ['Global CMB', 'Other Framework','wpb'],  # Sample values\n",
+    "    'Country R3': ['UK', 'US','IN'],  # Sample values\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame from the sample data\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Prepare an empty list to collect the expanded rows\n",
+    "expanded_rows = []\n",
+    "\n",
+    "# Loop through each row in the original DataFrame\n",
+    "for index, row in df.iterrows():\n",
+    "    # Repeat each row 8 times with GCB values from 0 to 7\n",
+    "    for gcb_value in range(8):\n",
+    "        # Append the row values with the new GCB value to the list\n",
+    "        expanded_rows.append({\n",
+    "            'Business Framework': row['Business Framework'],\n",
+    "            'Country R3': row['Country R3'],\n",
+    "            'GCB': gcb_value\n",
+    "        })\n",
+    "\n",
+    "# Create a new DataFrame from the expanded rows\n",
+    "expanded_df = pd.DataFrame(expanded_rows)\n",
+    "\n",
+    "# Save the final DataFrame to a new Excel file or CSV\n",
+    "# expanded_df.to_excel('expanded_output.xlsx', index=False)\n",
+    "print(expanded_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "987c8717",
+   "id": "c42c99ad",
    "metadata": {},
    "outputs": [],
    "source": [
