--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,40 +3,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d12730e",
+   "id": "d39e04d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import asyncio\n",
     "from playwright.async_api import async_playwright\n",
     "\n",
-    "async def run(playwright):\n",
-    "    edge_path = \"C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe\"  # Adjust if necessary\n",
-    "    browser = await playwright.chromium.launch_persistent_context(\n",
-    "        user_data_dir=\"C:/Users/KS/adata\",  # User's custom data directory\n",
-    "        executable_path=edge_path,\n",
-    "        headless=False\n",
-    "    )\n",
+    "async def run():\n",
+    "    # Path to the Edge executable\n",
+    "    edge_path = \"C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe\"  # Adjust this if necessary\n",
     "\n",
-    "    # Close the default homepage if it's open\n",
-    "    if len(browser.pages) > 0:\n",
-    "        await browser.pages[0].close()\n",
+    "    async with async_playwright() as playwright:\n",
+    "        # Launch Edge browser using the Chromium engine\n",
+    "        browser = await playwright.chromium.launch_persistent_context(\n",
+    "            user_data_dir=\"C:/Users/KS/adata\",  # User's custom data directory\n",
+    "            executable_path=edge_path,  # Launching Edge\n",
+    "            headless=False  # Run in a full browser window, not headless\n",
+    "        )\n",
     "\n",
-    "    # Open a new tab with the specified URL\n",
-    "    page = await browser.new_page()\n",
-    "    await page.goto(\"https://www.google.com\")  # Navigating to Google\n",
-    "    await page.screenshot(path=\"google_screenshot.png\")  # Take a screenshot\n",
+    "        # Close the default homepage if it's open\n",
+    "        if len(browser.pages) > 0:\n",
+    "            await browser.pages[0].close()\n",
     "\n",
-    "    # Close browser after task completion\n",
-    "    await browser.close()\n",
+    "        # Open a new tab with the specified URL\n",
+    "        page = await browser.new_page()\n",
+    "        await page.goto(\"https://www.google.com\")  # Navigating to Google\n",
     "\n",
-    "async def main():\n",
-    "    playwright = await async_playwright()\n",
-    "    await run(playwright)\n",
-    "    await playwright.stop()  # Ensure Playwright is stopped\n",
+    "        # Example interaction: take a screenshot if needed\n",
+    "        await page.screenshot(path=\"google_screenshot.png\")\n",
+    "        \n",
+    "        # Close browser after task completion\n",
+    "        await browser.close()\n",
     "\n",
+    "# Run the main function\n",
     "if __name__ == \"__main__\":\n",
-    "    asyncio.run(main())\n"
+    "    asyncio.run(run())\n"
    ]
   }
  ],
