--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d39e04d5",
+   "id": "b4eaf39d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,26 +15,26 @@
     "    edge_path = \"C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe\"  # Adjust this if necessary\n",
     "\n",
     "    async with async_playwright() as playwright:\n",
-    "        # Launch Edge browser using the Chromium engine\n",
-    "        browser = await playwright.chromium.launch_persistent_context(\n",
-    "            user_data_dir=\"C:/Users/KS/adata\",  # User's custom data directory\n",
+    "        # Launch a new browser window\n",
+    "        browser = await playwright.chromium.launch(\n",
     "            executable_path=edge_path,  # Launching Edge\n",
     "            headless=False  # Run in a full browser window, not headless\n",
     "        )\n",
     "\n",
-    "        # Close the default homepage if it's open\n",
-    "        if len(browser.pages) > 0:\n",
-    "            await browser.pages[0].close()\n",
-    "\n",
-    "        # Open a new tab with the specified URL\n",
+    "        # Open a new tab\n",
     "        page = await browser.new_page()\n",
+    "\n",
+    "        # Close the default tab if it's open (usually the first page)\n",
+    "        if len(browser.contexts) > 0:\n",
+    "            context = browser.contexts[0]  # Get the first context\n",
+    "            if len(context.pages) > 0:\n",
+    "                await context.pages[0].close()  # Close the first tab\n",
+    "\n",
+    "        # Navigate to the specified URL\n",
     "        await page.goto(\"https://www.google.com\")  # Navigating to Google\n",
     "\n",
     "        # Example interaction: take a screenshot if needed\n",
     "        await page.screenshot(path=\"google_screenshot.png\")\n",
-    "        \n",
-    "        # Close browser after task completion\n",
-    "        await browser.close()\n",
     "\n",
     "# Run the main function\n",
     "if __name__ == \"__main__\":\n",
