--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4eaf39d",
+   "id": "db1f799a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,20 +21,26 @@
     "            headless=False  # Run in a full browser window, not headless\n",
     "        )\n",
     "\n",
-    "        # Open a new tab\n",
-    "        page = await browser.new_page()\n",
+    "        # Create a new browser context\n",
+    "        context = await browser.new_context()\n",
     "\n",
-    "        # Close the default tab if it's open (usually the first page)\n",
-    "        if len(browser.contexts) > 0:\n",
-    "            context = browser.contexts[0]  # Get the first context\n",
-    "            if len(context.pages) > 0:\n",
-    "                await context.pages[0].close()  # Close the first tab\n",
+    "        # Open a new tab in the new context\n",
+    "        page = await context.new_page()\n",
     "\n",
     "        # Navigate to the specified URL\n",
     "        await page.goto(\"https://www.google.com\")  # Navigating to Google\n",
     "\n",
     "        # Example interaction: take a screenshot if needed\n",
     "        await page.screenshot(path=\"google_screenshot.png\")\n",
+    "\n",
+    "        # Keep the browser open for a while before closing (optional)\n",
+    "        await asyncio.sleep(10)  # Adjust this duration as needed\n",
+    "\n",
+    "        # Close the context (and all its pages)\n",
+    "        await context.close()\n",
+    "\n",
+    "        # Optionally close the browser if needed\n",
+    "        await browser.close()\n",
     "\n",
     "# Run the main function\n",
     "if __name__ == \"__main__\":\n",
