--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db1f799a",
+   "id": "fa33b599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "\n",
     "async def run():\n",
     "    # Path to the Edge executable\n",
-    "    edge_path = \"C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe\"  # Adjust this if necessary\n",
+    "    edge_path = \"C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe\"  # Adjust if necessary\n",
     "\n",
     "    async with async_playwright() as playwright:\n",
     "        # Launch a new browser window\n",
@@ -21,26 +21,26 @@
     "            headless=False  # Run in a full browser window, not headless\n",
     "        )\n",
     "\n",
-    "        # Create a new browser context\n",
+    "        # Open a new context (this is a fresh session)\n",
     "        context = await browser.new_context()\n",
     "\n",
-    "        # Open a new tab in the new context\n",
+    "        # Open a new page in that context\n",
     "        page = await context.new_page()\n",
     "\n",
     "        # Navigate to the specified URL\n",
     "        await page.goto(\"https://www.google.com\")  # Navigating to Google\n",
     "\n",
-    "        # Example interaction: take a screenshot if needed\n",
+    "        # Optionally take a screenshot\n",
     "        await page.screenshot(path=\"google_screenshot.png\")\n",
     "\n",
-    "        # Keep the browser open for a while before closing (optional)\n",
-    "        await asyncio.sleep(10)  # Adjust this duration as needed\n",
+    "        # Keep the browser open for a while (optional)\n",
+    "        await asyncio.sleep(10)  # Adjust duration as needed\n",
     "\n",
-    "        # Close the context (and all its pages)\n",
+    "        # Close the context (and its pages) after use\n",
     "        await context.close()\n",
     "\n",
-    "        # Optionally close the browser if needed\n",
-    "        await browser.close()\n",
+    "        # Optionally close the browser\n",
+    "#         await browser.close()\n",
     "\n",
     "# Run the main function\n",
     "if __name__ == \"__main__\":\n",
