--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab63970",
+   "id": "d9781224",
    "metadata": {},
    "outputs": [],
    "source": [
     "import asyncio\n",
-    "from playwright.async_api import async_playwright\n",
+    "from playwright.async_api import async_playwright, TimeoutError as PlaywrightTimeoutError\n",
     "\n",
     "async def run():\n",
-    "    # Path to the Edge executable\n",
-    "    edge_path = \"C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe\"  # Adjust if necessary\n",
+    "    # Path to the Chrome executable\n",
+    "    chrome_path = \"C:/Program Files/Google/Chrome/Application/chrome.exe\"  # Adjust if necessary\n",
     "\n",
     "    async with async_playwright() as playwright:\n",
-    "        # Launch a new browser window\n",
+    "        # Launch Chrome browser using the Chromium engine\n",
     "        browser = await playwright.chromium.launch(\n",
-    "            executable_path=edge_path,  # Launching Edge\n",
+    "            executable_path=chrome_path,  # Launching Chrome explicitly\n",
     "            headless=False  # Run in a full browser window, not headless\n",
     "        )\n",
     "\n",
@@ -27,20 +27,27 @@
     "        # Open a new page in that context\n",
     "        page = await context.new_page()\n",
     "\n",
-    "        # Navigate to the specified URL\n",
-    "        await page.goto(\"https://www.google.com\")  # Navigating to Google\n",
+    "        try:\n",
+    "            # Navigate to the specified Angular-based website\n",
+    "            await page.goto(\"https://www.example.com\")  # Replace with actual URL\n",
     "\n",
-    "        # Optionally take a screenshot\n",
-    "        await page.screenshot(path=\"google_screenshot.png\")\n",
+    "            # Wait for Angular to be fully loaded (networkidle ensures no ongoing requests)\n",
+    "            await page.wait_for_load_state('networkidle')\n",
     "\n",
-    "        # Keep the browser open for a while (optional)\n",
-    "        await asyncio.sleep(10)  # Adjust duration as needed\n",
+    "            # Wait for the button with the id 'loginSsoContinueBtn' to be available\n",
+    "            await page.wait_for_selector('#loginSsoContinueBtn', timeout=15000)  # Timeout after 15s\n",
     "\n",
-    "        # Close the context (and its pages) after use\n",
-    "        await context.close()\n",
+    "            # Click the button with id 'loginSsoContinueBtn'\n",
+    "            await page.click('#loginSsoContinueBtn')\n",
     "\n",
-    "        # Optionally close the browser\n",
-    "#         await browser.close()\n",
+    "        except PlaywrightTimeoutError:\n",
+    "            print(\"The button or page took too long to load.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"An unexpected error occurred: {e}\")\n",
+    "\n",
+    "        # Keep the browser open after interacting with the page\n",
+    "        print(\"The browser will remain open.\")\n",
+    "        await asyncio.sleep(300)  # Keep open for 5 minutes or until manually closed\n",
     "\n",
     "# Run the main function\n",
     "if __name__ == \"__main__\":\n",
