--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9781224",
+   "id": "c0f7acbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "from playwright.async_api import async_playwright\n",
+    "\n",
+    "async def run():\n",
+    "    # Path to the Chrome executable\n",
+    "    chrome_path = \"C:/Program Files/Google/Chrome/Application/chrome.exe\"  # Adjust if necessary\n",
+    "\n",
+    "    async with async_playwright() as playwright:\n",
+    "        # Launch Chrome browser using the Chromium engine\n",
+    "        browser = await playwright.chromium.launch(\n",
+    "            executable_path=chrome_path,  # Launching Chrome explicitly\n",
+    "            headless=False  # Run in a full browser window, not headless\n",
+    "        )\n",
+    "\n",
+    "        # Open a new context (this is a fresh session)\n",
+    "        context = await browser.new_context()\n",
+    "\n",
+    "        # Open a new page in that context\n",
+    "        page = await context.new_page()\n",
+    "\n",
+    "        # Navigate to the specified website\n",
+    "        await page.goto(\"https://www.example.com\")  # Replace with actual URL\n",
+    "\n",
+    "        # Wait for the page to fully load\n",
+    "        await page.wait_for_load_state('networkidle')\n",
+    "\n",
+    "        print(\"Page content loaded. Extracting buttons and filters...\")\n",
+    "\n",
+    "        # Get all buttons\n",
+    "        buttons = await page.query_selector_all('button')\n",
+    "\n",
+    "        # Print details for all buttons\n",
+    "        print(\"\\nButtons Found:\")\n",
+    "        for button in buttons:\n",
+    "            # Get button details like id, text, class, etc.\n",
+    "            button_id = await button.get_attribute('id')\n",
+    "            button_text = await button.inner_text()\n",
+    "            button_class = await button.get_attribute('class')\n",
+    "\n",
+    "            print(f\"ID: {button_id}, Text: {button_text}, Class: {button_class}\")\n",
+    "\n",
+    "        # Get all filters (example: input fields or dropdowns)\n",
+    "        filters = await page.query_selector_all('input, select')\n",
+    "\n",
+    "        # Print details for all filters\n",
+    "        print(\"\\nFilters Found:\")\n",
+    "        for filter_el in filters:\n",
+    "            # Get filter details like id, name, type, etc.\n",
+    "            filter_id = await filter_el.get_attribute('id')\n",
+    "            filter_name = await filter_el.get_attribute('name')\n",
+    "            filter_type = await filter_el.get_attribute('type')\n",
+    "\n",
+    "            print(f\"ID: {filter_id}, Name: {filter_name}, Type: {filter_type}\")\n",
+    "\n",
+    "        # Keep the browser open after interacting with the page\n",
+    "        await asyncio.sleep(300)  # Keep open for 5 minutes or until manually closed\n",
+    "\n",
+    "# Run the main function\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(run())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf67e314",
    "metadata": {},
    "outputs": [],
    "source": [
