--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f7acbe",
+   "id": "48ef4c07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "from playwright.async_api import async_playwright, TimeoutError as PlaywrightTimeoutError\n",
+    "\n",
+    "async def run():\n",
+    "    # Path to the Chrome executable\n",
+    "    chrome_path = \"C:/Program Files/Google/Chrome/Application/chrome.exe\"  # Adjust if necessary\n",
+    "\n",
+    "    async with async_playwright() as playwright:\n",
+    "        # Launch Chrome browser using the Chromium engine\n",
+    "        browser = await playwright.chromium.launch(\n",
+    "            executable_path=chrome_path,  # Launching Chrome explicitly\n",
+    "            headless=False  # Run in a full browser window, not headless\n",
+    "        )\n",
+    "\n",
+    "        # Open a new context (this is a fresh session)\n",
+    "        context = await browser.new_context()\n",
+    "\n",
+    "        # Open a new page in that context\n",
+    "        page = await context.new_page()\n",
+    "\n",
+    "        # Navigate to the specified website\n",
+    "        await page.goto(\"https://www.example.com\")  # Replace with actual URL\n",
+    "\n",
+    "        # Wait for the page to fully load (networkidle ensures no ongoing requests)\n",
+    "        await page.wait_for_load_state('networkidle')\n",
+    "\n",
+    "        print(\"Page content loaded. Extracting buttons and filters...\")\n",
+    "\n",
+    "        # Get all buttons\n",
+    "        buttons = await page.query_selector_all('button')\n",
+    "\n",
+    "        # Print details for all buttons\n",
+    "        print(\"\\nButtons Found:\")\n",
+    "        for button in buttons:\n",
+    "            button_id = await button.get_attribute('id')\n",
+    "            button_text = await button.inner_text()\n",
+    "            button_class = await button.get_attribute('class')\n",
+    "            print(f\"ID: {button_id}, Text: {button_text}, Class: {button_class}\")\n",
+    "\n",
+    "        # Find and click the button with the text \"My organization's single sign-on (SSO)\"\n",
+    "        button_text_selector = \"//button[text()=\\\"My organization's single sign-on (SSO)\\\"]\"\n",
+    "        try:\n",
+    "            # Wait for the button to be available and click it\n",
+    "            await page.wait_for_selector(f'xpath={button_text_selector}', timeout=10000)  # Timeout after 10 seconds\n",
+    "            await page.click(f'xpath={button_text_selector}')\n",
+    "            print(\"SSO button clicked successfully!\")\n",
+    "        except PlaywrightTimeoutError:\n",
+    "            print(\"Could not find the SSO button on the page.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "        # Keep the browser open after interacting with the page\n",
+    "        await asyncio.sleep(300)  # Keep open for 5 minutes or until manually closed\n",
+    "\n",
+    "# Run the main function\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(run())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7366c8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf67e314",
+   "id": "f872e347",
    "metadata": {},
    "outputs": [],
    "source": [
