--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48ef4c07",
+   "id": "2253e1d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "from playwright.async_api import async_playwright, TimeoutError as PlaywrightTimeoutError\n",
+    "\n",
+    "async def run():\n",
+    "    chrome_path = \"C:/Program Files/Google/Chrome/Application/chrome.exe\"  # Adjust if necessary\n",
+    "\n",
+    "    async with async_playwright() as playwright:\n",
+    "        # Launch Chrome browser using the Chromium engine\n",
+    "        browser = await playwright.chromium.launch(\n",
+    "            executable_path=chrome_path, \n",
+    "            headless=False  # Run in a full browser window, not headless\n",
+    "        )\n",
+    "        context = await browser.new_context()\n",
+    "        page = await context.new_page()\n",
+    "\n",
+    "        # Navigate to the initial website\n",
+    "        await page.goto(\"https://www.example.com\")  # Replace with actual URL\n",
+    "\n",
+    "        # Wait for the page to fully load\n",
+    "        await page.wait_for_load_state('networkidle')\n",
+    "\n",
+    "        # Click the SSO button\n",
+    "        button_text_selector = \"//button[text()=\\\"My organization's single sign-on (SSO)\\\"]\"\n",
+    "        try:\n",
+    "            await page.wait_for_selector(f'xpath={button_text_selector}', timeout=10000)\n",
+    "            await page.click(f'xpath={button_text_selector}')\n",
+    "            print(\"SSO button clicked successfully!\")\n",
+    "        except PlaywrightTimeoutError:\n",
+    "            print(\"Could not find the SSO button on the page.\")\n",
+    "\n",
+    "        # Wait for the dashboard to load\n",
+    "        await page.wait_for_load_state('networkidle')\n",
+    "\n",
+    "        print(\"Dashboard loaded. Interacting with filters...\")\n",
+    "\n",
+    "        # Select first filter (\"Finance\" option)\n",
+    "        try:\n",
+    "            await page.wait_for_selector('select#firstFilter', timeout=10000)  # Replace with actual ID\n",
+    "            await page.select_option('select#firstFilter', label='Finance')  # Use 'label' or 'value'\n",
+    "            print(\"Selected 'Finance' in the first filter.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error selecting first filter: {e}\")\n",
+    "\n",
+    "        # Loop through all options in the second filter\n",
+    "        try:\n",
+    "            await page.wait_for_selector('select#secondFilter', timeout=10000)  # Replace with actual ID\n",
+    "            second_filter_options = await page.query_selector_all('select#secondFilter option')\n",
+    "\n",
+    "            for option in second_filter_options:\n",
+    "                option_value = await option.get_attribute('value')\n",
+    "                option_text = await option.inner_text()\n",
+    "                \n",
+    "                print(f\"Selecting second filter option: {option_text}\")\n",
+    "                await page.select_option('select#secondFilter', value=option_value)\n",
+    "\n",
+    "                # Click ellipses to download report\n",
+    "                await page.click('.ellipses-menu')  # Replace with actual selector for ellipses\n",
+    "                await page.click('button#downloadReport')  # Replace with actual selector for download button\n",
+    "\n",
+    "                print(f\"Report for {option_text} downloaded.\")\n",
+    "                await asyncio.sleep(2)  # Delay between downloads\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing second filter options: {e}\")\n",
+    "\n",
+    "        # Keep the browser open for inspection\n",
+    "        await asyncio.sleep(300)  # Keep open for 5 minutes or until manually closed\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(run())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c31084d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7366c8e",
+   "id": "da4f9608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f872e347",
+   "id": "19b57bcf",
    "metadata": {},
    "outputs": [],
    "source": [
