--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2253e1d0",
+   "id": "4782ed22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,15 @@
     "    chrome_path = \"C:/Program Files/Google/Chrome/Application/chrome.exe\"  # Adjust if necessary\n",
     "\n",
     "    async with async_playwright() as playwright:\n",
-    "        # Launch Chrome browser using the Chromium engine\n",
     "        browser = await playwright.chromium.launch(\n",
     "            executable_path=chrome_path, \n",
-    "            headless=False  # Run in a full browser window, not headless\n",
+    "            headless=False\n",
     "        )\n",
     "        context = await browser.new_context()\n",
     "        page = await context.new_page()\n",
     "\n",
     "        # Navigate to the initial website\n",
     "        await page.goto(\"https://www.example.com\")  # Replace with actual URL\n",
-    "\n",
-    "        # Wait for the page to fully load\n",
     "        await page.wait_for_load_state('networkidle')\n",
     "\n",
     "        # Click the SSO button\n",
@@ -40,39 +37,20 @@
     "        # Wait for the dashboard to load\n",
     "        await page.wait_for_load_state('networkidle')\n",
     "\n",
-    "        print(\"Dashboard loaded. Interacting with filters...\")\n",
+    "        print(\"Dashboard loaded. Extracting filter names...\")\n",
     "\n",
-    "        # Select first filter (\"Finance\" option)\n",
-    "        try:\n",
-    "            await page.wait_for_selector('select#firstFilter', timeout=10000)  # Replace with actual ID\n",
-    "            await page.select_option('select#firstFilter', label='Finance')  # Use 'label' or 'value'\n",
-    "            print(\"Selected 'Finance' in the first filter.\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error selecting first filter: {e}\")\n",
+    "        # Locate all dropdown filters (select elements)\n",
+    "        filters = await page.query_selector_all('select, input')  # Include both selects and inputs\n",
     "\n",
-    "        # Loop through all options in the second filter\n",
-    "        try:\n",
-    "            await page.wait_for_selector('select#secondFilter', timeout=10000)  # Replace with actual ID\n",
-    "            second_filter_options = await page.query_selector_all('select#secondFilter option')\n",
-    "\n",
-    "            for option in second_filter_options:\n",
-    "                option_value = await option.get_attribute('value')\n",
-    "                option_text = await option.inner_text()\n",
-    "                \n",
-    "                print(f\"Selecting second filter option: {option_text}\")\n",
-    "                await page.select_option('select#secondFilter', value=option_value)\n",
-    "\n",
-    "                # Click ellipses to download report\n",
-    "                await page.click('.ellipses-menu')  # Replace with actual selector for ellipses\n",
-    "                await page.click('button#downloadReport')  # Replace with actual selector for download button\n",
-    "\n",
-    "                print(f\"Report for {option_text} downloaded.\")\n",
-    "                await asyncio.sleep(2)  # Delay between downloads\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error processing second filter options: {e}\")\n",
+    "        # Print details for all filters\n",
+    "        print(\"\\nFilters Found:\")\n",
+    "        for filter_el in filters:\n",
+    "            filter_name = await filter_el.get_attribute('name') or await filter_el.get_attribute('id')\n",
+    "            filter_type = await filter_el.get_attribute('type') if await filter_el.get_attribute('type') else 'select'\n",
+    "            print(f\"Filter Name: {filter_name}, Filter Type: {filter_type}\")\n",
     "\n",
     "        # Keep the browser open for inspection\n",
-    "        await asyncio.sleep(300)  # Keep open for 5 minutes or until manually closed\n",
+    "        await asyncio.sleep(300)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    asyncio.run(run())\n"
@@ -81,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c31084d",
+   "id": "cc5ea628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da4f9608",
+   "id": "a06fe57d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b57bcf",
+   "id": "cb83b715",
    "metadata": {},
    "outputs": [],
    "source": [
